# ldap-test-server

./: .gitlab-ci.yml  Cargo.toml  README.md  deny.toml  justfile
ldap-test-server/: Cargo.toml  README.md
ldap-test-server-cli/: Cargo.toml  README.md
ldap-test-server-cli/example/: run_example.sh
ldap-test-server-cli/example/data/: 02_group.ldif  03_leela.ldif
ldap-test-server-cli/example/schema/: 01_user.ldif
ldap-test-server-cli/src/: main.rs
ldap-test-server/src/: builder.rs  init.ldif  lib.rs
ldap-test-server/tests/: cucumber_ldap3.rs  fry.ldif  ssl.rs
ldap-test-server/tests/features/: ldap_server.feature
src/: builder.rs  init.ldif  lib.rs  slapd.init.ldif
tests/: cucumber_ldap3.rs  ldap-rs-crate.rs
