[package]
name = "ldap-test-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portpicker = "0.1.1"
tempfile = "3.4.0"
timeout-readwrite = "0.3.3"
url = "2.3.1"


[dev-dependencies]
ldap-rs = "0.4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.27"
