[package]
name = "ldap-test-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portpicker = "0.1"
tempfile = "3"
url = "2"
tokio = { version  = "1", features = ["fs", "process", "time", "net", "io-util"] }


[dev-dependencies]
ldap-rs = "0.4.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.27"
