[package]
name = "ldap-test-server-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command line for running OpenLDAP server for testing"
repository.workspace = true
keywords = ["ldap"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ldap-test-server = { version = "0.1.0", path = "../ldap-test-server" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
