[package]
name = "ldap-test-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Running isolated OpenLDAP servers in integration tests"
documentation = "https://docs.rs/ldap-test-server"
repository.workspace = true
keywords = ["ldap", "test"]
categories = ["development-tools::testing"]

[dependencies]
portpicker = "0.1"
rand = "0.8"
tempfile = "3"
url = "2"
tokio = { version  = "1", features = ["fs", "process", "time", "net", "io-util", "rt"] }
dircpy = "0.3"
tracing = "0.1"
rcgen = "0.10.0"

[dev-dependencies]
ldap-rs = "0.4.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.28"
cucumber = "0.19.1"
ldap3 = "0.11.1"
derivative = "2.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"
native-tls = "0.2.11"

[[test]]
name = "cucumber_ldap3"
harness = false  # allows Cucumber to print output instead of libtest
