[package]
name = "ldap-test-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Running isolated OpenLDAP servers in integration tests"
documentation = "https://docs.rs/ldap-test-server"
repository.workspace = true
keywords = ["ldap", "test"]
categories = ["development-tools::testing"]

[dependencies]
dircpy = "0.3"
portpicker = "0.1"
rand = "0.8"
rcgen = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["fs", "process", "time", "net", "io-util", "rt"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
cucumber = "0.21.1"
derive_more = { version = "1.0.0", features = ["debug"] }
futures-util = "0.3.31"
ldap-rs = "0.4.3"
ldap3 = "0.11.5"
native-tls = "0.2.12"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "cucumber_ldap3"
harness = false  # allows Cucumber to print output instead of libtest
